# SlideAI

./: .env.sample  .gitignore  CLAUDE.md  README.md  cookies.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: ai-pipeline-debug.md  feature-dev.md  layer-check.md
.claude/commands/: check-layers.md  new-feature.md
apps/accounts/: admin.py  backends.py  urls.py
apps/accounts/forms/: __init__.py  auth_forms.py  profile_forms.py
apps/ai/: dtos.py
apps/api/: exceptions.py  pagination.py  urls.py
apps/core/: base_repository.py  constants.py  dtos.py  exceptions.py  mixins.py  utils.py  views.py
apps/presentations/: admin.py  apps.py  context_processors.py  dtos.py  urls.py
config/: urls.py
config/settings/: __init__.py  base.py  development.py  production.py  test.py
static/css/: app.css  main.css  slides.css
static/js/: app.js  main.js  slide-editor.js  slide-reorder.js  slideshow.js
templates/: base.html  landing.html
templates/accounts/: login.html  profile.html  profile_edit.html  register.html
templates/components/: _footer.html  _messages.html  _mobile_bottom_nav.html  _navbar.html  _pagination.html  _sidebar.html  _topbar.html
templates/errors/: 400.html  403.html  404.html  409.html  500.html
templates/layouts/: app.html  auth.html  error.html
templates/presentations/: _slide_card.html  confirm_delete.html  create.html  dashboard.html  detail.html  edit.html  editor.html  generate.html  list.html  present.html  slide_form.html  slide_list.html  template_gallery.html  template_preview.html
(+92 files in other folders)
